<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/album_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/album_list_entry"
            android:padding="11dp">

        <TextView
            android:id="@+id/album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album_name"
            android:textSize="26sp"
            android:textStyle="bold" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/rename_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rename_button_text"
                    android:clickable="true"
                    android:layout_gravity="end"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/deleteAlbum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:clickable="true"
                    android:layout_gravity="end"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/openAlbum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_album"
                    android:clickable="true"
                    android:layout_gravity="end"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>