<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/search_screen"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#136FDF"
            android:elevation="4dp"
            android:minHeight="56dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/searchToolbarAlbumText"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:elevation="5dp"
            android:gravity="end"
            android:padding="10dp"
            android:text="@string/search_screen"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:translationX="130dp"
            android:translationY="-63dp"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/person_tag_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/person_tag_search"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="14sp"
            android:text="@string/search_person_hint"
            android:hint="@string/search_person_hint">

        </AutoCompleteTextView>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/location_tag_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/person_tag_textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/location_tag_search"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/search_location_hint"
            android:textSize="14sp"
            android:hint="@string/search_location_hint">

        </AutoCompleteTextView>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/or_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:text="@string/search_or"
        android:textSize="16sp"
        android:translationX="20dp"
        android:translationY="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_tag_textInputLayout">

    </CheckBox>

    <CheckBox
        android:id="@+id/and_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_and"
        android:textSize="16sp"
        android:translationX="50dp"
        android:translationY="10dp"
        app:layout_constraintStart_toEndOf="@+id/or_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/location_tag_textInputLayout">

    </CheckBox>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:translationX="25dp"
        android:translationY="20dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_checkbox"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationY="40dp"
        app:layout_constraintTop_toBottomOf="@+id/search_button">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>