<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlbumsList">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#136FDF"
            android:elevation="4dp"
            android:minHeight="56dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/toolbarHomeText"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/home_description"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:translationY="-62dp"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deleteAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:contentDescription="@string/delete_album_button"
            android:rotation="45"
            android:tint="#FFFFFF"
            android:translationX="-60dp"
            android:translationY="-114dp"
            app:backgroundTint="#EA0B0B"
            app:fabCustomSize="30dp"
            app:maxImageSize="30dp"
            app:srcCompat="@android:drawable/ic_input_add" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/createAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:contentDescription="@string/create_album_button"
            android:tint="#FFFFFF"
            android:translationY="-162dp"
            app:backgroundTint="#3BEC0A"
            app:fabCustomSize="30dp"
            app:maxImageSize="30dp"
            app:srcCompat="@android:drawable/ic_input_add" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/tagSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:contentDescription="@string/search_photos_button"
            android:tint="#000000"
            android:translationX="-120dp"
            android:translationY="-210dp"
            app:backgroundTint="#000000"
            app:fabCustomSize="30dp"
            app:maxImageSize="30dp"
            app:srcCompat="@android:drawable/ic_menu_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/albums_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="576dp"
            android:translationY="-204dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>