<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#136FDF"
            android:elevation="4dp"
            android:minHeight="56dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="511dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout9"
        app:layout_constraintStart_toEndOf="@+id/linearLayout7"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">


        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/photo"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linearLayout8"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
            app:srcCompat="@android:drawable/ic_menu_gallery" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#136FDF"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/add_tag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/add_tag_button_text"
            android:translationY="9dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/previous_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_gravity="start|center"
            android:clickable="true"
            android:rotationY="180"
            android:translationX="80dp"
            android:translationY="-44dp"
            android:contentDescription="@string/previous_photo_button"
            app:maxImageSize="50dp"
            app:srcCompat="@android:drawable/ic_media_play" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/next_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_gravity="end|center"
            android:clickable="true"
            android:translationX="-80dp"
            android:translationY="-100dp"
            android:contentDescription="@string/next_photo_button"
            app:maxImageSize="50dp"
            app:srcCompat="@android:drawable/ic_media_play" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>