<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/album_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#136FDF"
            android:elevation="4dp"
            android:minHeight="56dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/toolbarAlbumText"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:elevation="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/album_name"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:translationY="-63dp"
            android:translationX="60dp"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/upload_photo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:clickable="true"
            android:contentDescription="@string/add_photo_button"
            android:elevation="5dp"
            android:tint="#FFFFFF"
            android:translationY="-118dp"
            app:backgroundTint="#31DC13"
            app:fabCustomSize="30dp"
            app:maxImageSize="30dp"
            app:srcCompat="@android:drawable/ic_menu_upload" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_photo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:clickable="true"
            android:contentDescription="@string/delete_photo_button"
            android:elevation="5dp"
            android:tint="#FFFFFF"
            android:translationX="-65dp"
            android:translationY="-166dp"
            app:backgroundTint="#EC0A0A"
            app:fabCustomSize="30dp"
            app:maxImageSize="30dp"
            app:srcCompat="@android:drawable/ic_menu_delete" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="387dp"
        android:layout_height="578dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/album_photos_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>